# MyPersonalWebsite

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: description_section.py  main.py  my_data.py  transformation_data_for_markdown.py
