[tool.black]
line-length = 79
exclude = '''
/(
    .venv
)/
'''

[tool.poetry]
name = "My Personal Website"
version = "0.1.0"
description = ""
authors = ["Alex Grytsai <a.grytsai1987@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
